--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
-REACT_APP_API_URL=https://web-production-828b8.up.railway.app
-REACT_APP_ENV=production
-REACT_APP_DEBUG==flase
+# Configuration de l'API backend
+REACT_APP_API_URL=https://your-production-api.com
+
+# Configuration optionnelle
+REACT_APP_API_TIMEOUT=30000
+REACT_APP_DEBUG=false
+REACT_APP_ENABLE_NOTIFICATIONS=true
+REACT_APP_ENABLE_REALTIME_UPDATES=true
+REACT_APP_ENABLE_FILE_UPLOAD=true
+REACT_APP_ENABLE_BULK_OPERATIONS=true
+
+# Variables automatiques (configurées par Netlify)
+REACT_APP_NAME="Coffee Meeting Platform"
+REACT_APP_VERSION="2.0.0"
+REACT_APP_ENVIRONMENT="production"
