--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Configuration de l'API backend
 REACT_APP_API_URL=https://your-production-api.com
 
+# Configuration de l'URL frontend (pour les emails)
+REACT_APP_FRONTEND_URL=https://your-netlify-domain.netlify.app
+
 # Configuration optionnelle
 REACT_APP_API_TIMEOUT=30000
 REACT_APP_DEBUG=false
