--- a/netlify.toml
+++ b/netlify.toml
@@ -13,8 +13,9 @@
   REACT_APP_VERSION = "2.0.0"
   REACT_APP_ENVIRONMENT = "production"
   REACT_APP_DEBUG = "false"
-  # NOTE: Set REACT_APP_API_URL in Netlify environment variables
+  # NOTE: Set these URLs in Netlify environment variables
   # REACT_APP_API_URL = "https://your-production-api.com"
+  # REACT_APP_FRONTEND_URL = "https://your-netlify-domain.netlify.app"
   REACT_APP_API_TIMEOUT = "30000"
   REACT_APP_ENABLE_NOTIFICATIONS = "true"
   REACT_APP_ENABLE_REALTIME_UPDATES = "true"
